Corrected text spacing issue within accordion elements

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,7 @@
 body {
     font-family: 'Heebo';
     background-color: #FBF8F4;
+    font-size: 1rem;
 }
 nav {
     background: #FBF8F4;
@@ -81,7 +82,7 @@ a:hover {
     align-items: center;
     justify-content: center;
     justify-content: space-between;
-    letter-spacing: 0.5px;
+    width: 100%;
 }
 #card-body {
     max-width: auto;
@@ -164,13 +165,14 @@ a:hover {
     /* #73f9d9 */
 }
 #apptitle {
-    font-family: 'Maven Pro', sans-serif;
+    width: 100%;
+    font-family: 'Heebo';
     font-size: 1.5em;
     text-transform: uppercase;
     font-weight: bold;
 }
 #evtitle {
-    font-family: 'Maven Pro', sans-serif;
+    font-family: 'Heebo';
     font-size: 1.5em;
     text-transform: uppercase;
     font-weight: bold;
